@@ -13,17 +13,19 @@ import com.teckit.festival.repository.FestivalDetailRepository;
 import com.teckit.festival.repository.FestivalRepository;
 import com.teckit.festival.repository.FestivalScheduleRepository;
 import com.teckit.festival.util.DateUtil;
+import com.teckit.festival.util.FestivalIdGenerator;
+import com.teckit.festival.util.FestivalStatusUtil;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.hibernate.Hibernate;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-import java.util.ArrayList;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.DeleteObjectRequest;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -37,41 +39,53 @@ public class FestivalManageService {
     private final FestivalDetailRepository detailRepository;
     private final FestivalScheduleRepository scheduleRepository;
     private final FestivalKafkaProducer kafkaProducer;
-    private final FileUploadService fileUploadService;
+    private final FestivalIdGenerator festivalIdGenerator;
 
+    private final S3Client s3Client;   // 삭제용
+    private final String s3BucketName; // 삭제용
+    private final S3Service s3Service; // 업로드용 Presigned URL 서비스
+
+    // 공연 등록 (파일 S3 업로드 후 URL DB 저장)
     @Transactional
-    public FestivalRegisterResponseDTO registerFestivalWithDetails(FestivalRegisterDTO request, Long userId, MultipartFile posterFile, List<MultipartFile> contentFiles) {
-        // 1. DTO 유효성 검사
+    public FestivalRegisterResponseDTO registerFestivalWithDetails(
+            FestivalRegisterDTO request,
+            Long userId,
+            MultipartFile posterFile,
+            List<MultipartFile> contentFiles
+    ) {
         var detailReq = request.getDetail();
         if (detailReq == null) {
             throw new BusinessException(ErrorCode.INVALID_REQUEST, "공연 상세 정보가 누락되었습니다.");
         }
 
-        // 2. 파일 업로드
-        String posterUrl = (posterFile != null && !posterFile.isEmpty()) ? fileUploadService.uploadFile(posterFile) : null;
-        List<String> contentUrls = new ArrayList<>();
-        if (contentFiles != null && !contentFiles.isEmpty()) {
-            for (MultipartFile file : contentFiles) {
-                contentUrls.add(fileUploadService.uploadFile(file));
-            }
+        // 1. S3 업로드
+        String posterUrl = (posterFile != null) ? s3Service.uploadFile(posterFile) : null;
+        List<String> contentUrls = (contentFiles != null && !contentFiles.isEmpty())
+                ? contentFiles.stream().map(s3Service::uploadFile).toList()
+                : List.of();
+
+        List<String> mergedContentFiles = new java.util.ArrayList<>();
+        if (detailReq.getContentFile() != null) {
+            mergedContentFiles.addAll(detailReq.getContentFile());
+        }
+        if (contentUrls != null && !contentUrls.isEmpty()) {
+            mergedContentFiles.addAll(contentUrls);
         }
 
-        // 3. 고유한 ID 생성 (중복 체크 포함)
-        String fid = generateUniqueFid();
-
-        int safeTicketPick  = Math.max(1, detailReq.getTicketPick());
+        // 2. 기본 데이터 가공
+        String fid = festivalIdGenerator.generateUniqueFid();
+        int safeTicketPick = Math.max(1, detailReq.getTicketPick());
         int safeMaxPurchase = Math.max(1, detailReq.getMaxPurchase());
-        int safeAvailable   = Math.max(0, detailReq.getAvailableNOP());
+        int safeAvailable = Math.max(0, detailReq.getAvailableNOP());
 
         LocalDate fdfrom = DateUtil.parseDate(request.getFdfrom());
-        LocalDate fdto   = DateUtil.parseDate(request.getFdto());
-        String computedState = calcState(fdfrom, fdto);
+        LocalDate fdto = DateUtil.parseDate(request.getFdto());
+        String computedState = FestivalStatusUtil.calcState(fdfrom, fdto);
 
-        // 4. FestivalDetail Entity 생성
+        // 3. FestivalDetail 생성
         FestivalDetail detail = FestivalDetail.builder()
                 .id(fid)
                 .userId(userId)
-                .fcltyid(detailReq.getFcltyid())
                 .fname(request.getFname())
                 .fdfrom(fdfrom)
                 .fdto(fdto)
@@ -88,26 +102,24 @@ public class FestivalManageService {
                 .maxPurchase(safeMaxPurchase)
                 .prfage(detailReq.getPrfage())
                 .posterFile(posterUrl)
-                .contentFile(contentUrls)
+                .contentFile(mergedContentFiles)
                 .entrpsnmH(detailReq.getEntrpsnmH())
                 .runningTime(detailReq.getRunningTime())
-                .updatedate( (detailReq.getUpdatedate()!=null && !detailReq.getUpdatedate().isBlank())
-                        ? LocalDateTime.parse(detailReq.getUpdatedate().substring(0,19), DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"))
-                        : LocalDateTime.now())
+                .updatedate(LocalDateTime.now())
                 .build();
 
-        // 5. FestivalSchedule Entity 생성 및 연관 관계 설정
-        List<FestivalSchedule> schedules = (request.getSchedules()==null ? List.of()
+        // 4. Schedule 매핑
+        List<FestivalSchedule> schedules = (request.getSchedules() == null ? List.of()
                 : request.getSchedules().stream()
                 .map(s -> FestivalSchedule.builder()
                         .festivalDetail(detail)
                         .dayOfWeek(FestivalScheduleDay.valueOf(s.getDayOfWeek().toUpperCase()))
                         .time(s.getTime())
                         .build())
-                .collect(Collectors.toList()));
+                .toList());
         detail.setSchedules(schedules);
 
-        // 6. Festival Entity 생성 및 연관 관계 설정
+        // 5. Festival 생성
         Festival festival = Festival.builder()
                 .fname(request.getFname())
                 .fdfrom(fdfrom)
@@ -121,21 +133,23 @@ public class FestivalManageService {
                 .build();
         detail.setFestival(festival);
 
-        // 7. 저장
+        // 6. 저장 및 Kafka 전송
         detailRepository.saveAndFlush(detail);
+        kafkaProducer.send(detail, "FESTIVAL_CREATED");
 
-        // 8. 저장 후 재조회 및 Kafka 전송
-        FestivalDetail persisted = detailRepository.findById(fid)
-                .orElseThrow(() -> new BusinessException(ErrorCode.INTERNAL_SERVER_ERROR, "저장된 공연 정보를 찾을 수 없습니다."));
-
-        kafkaProducer.send(persisted, "FESTIVAL_CREATED");
-
-        return FestivalRegisterResponseDTO.fromEntity(festival, persisted, schedules);
+        // 7. DTO 반환
+        return FestivalRegisterResponseDTO.fromEntity(festival, detail, schedules);
     }
 
+    // 공연 수정 (파일 교체 시 S3 업로드/삭제)
     @Transactional
-    public FestivalRegisterResponseDTO updateFestival(String fid, FestivalRegisterDTO request, Long userId, MultipartFile posterFile, List<MultipartFile> contentFiles) {
-        // 1. 공연 존재 여부 및 소유자 확인
+    public FestivalRegisterResponseDTO updateFestival(
+            String fid,
+            FestivalRegisterDTO request,
+            Long userId,
+            MultipartFile posterFile,
+            List<MultipartFile> contentFiles
+    ) {
         Festival festival = festivalRepository.findByFestivalDetail_Id(fid)
                 .orElseThrow(() -> new BusinessException(ErrorCode.FESTIVAL_NOT_FOUND));
 
@@ -143,33 +157,42 @@ public class FestivalManageService {
             throw new BusinessException(ErrorCode.NOT_OWNER);
         }
 
-        // 2. DTO 유효성 검사
         var detailReq = request.getDetail();
         if (detailReq == null) {
             throw new BusinessException(ErrorCode.INVALID_REQUEST, "공연 상세 정보가 누락되었습니다.");
         }
 
-        // 3. 파일 업로드 (기존 파일 유지 로직)
-        String posterUrl = (posterFile != null && !posterFile.isEmpty()) ? fileUploadService.uploadFile(posterFile) : festival.getPosterFile();
-        List<String> contentUrls = new ArrayList<>();
-        if (contentFiles != null && !contentFiles.isEmpty()) {
-            for (MultipartFile file : contentFiles) {
-                contentUrls.add(fileUploadService.uploadFile(file));
+        FestivalDetail detail = festival.getFestivalDetail();
+
+        // 포스터 교체
+        if (posterFile != null) {
+            if (detail.getPosterFile() != null) {
+                deleteFileFromS3(detail.getPosterFile()); // 기존 삭제
             }
+            String newPosterUrl = s3Service.uploadFile(posterFile); // 새 업로드
+            detail.setPosterFile(newPosterUrl);
+            festival.setPosterFile(newPosterUrl);
+        }
+
+        // 콘텐츠 교체
+        if (contentFiles != null && !contentFiles.isEmpty()) {
+            if (detail.getContentFile() != null) {
+                detail.getContentFile().forEach(this::deleteFileFromS3);
+            }
+            List<String> newContentUrls = contentFiles.stream()
+                    .map(s3Service::uploadFile)
+                    .toList();
+            detail.setContentFile(newContentUrls);
         }
 
         LocalDate fdfrom = DateUtil.parseDate(request.getFdfrom());
-        LocalDate fdto   = DateUtil.parseDate(request.getFdto());
-        String computedState = calcState(fdfrom, fdto);
+        LocalDate fdto = DateUtil.parseDate(request.getFdto());
+        String computedState = FestivalStatusUtil.calcState(fdfrom, fdto);
 
-        // 4. Entity 업데이트
-        FestivalDetail detail = festival.getFestivalDetail();
         detail.setFname(request.getFname());
         detail.setFdfrom(fdfrom);
         detail.setFdto(fdto);
         detail.setFcltynm(request.getFcltynm());
-        detail.setPosterFile(posterUrl);
-        detail.setContentFile(contentUrls);
         detail.setGenrenm(request.getGenrenm());
         detail.setFstate(computedState);
         detail.setPrfage(detailReq.getPrfage());
@@ -182,18 +205,9 @@ public class FestivalManageService {
         detail.setRunningTime(detailReq.getRunningTime());
         detail.setEntrpsnmH(detailReq.getEntrpsnmH());
         detail.setAvailableNOP(Math.max(0, detailReq.getAvailableNOP()));
+        detail.setUpdatedate(LocalDateTime.now());
 
-        detail.setUpdatedate(
-                detailReq.getUpdatedate() != null && !detailReq.getUpdatedate().isBlank()
-                        ? LocalDateTime.parse(
-                        detailReq.getUpdatedate().substring(0, 19),
-                        DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")
-                )
-                        : LocalDateTime.now()
-        );
-
-        // 5. 스케줄 업데이트
-        // 기존 스케줄 삭제 후 새로 저장 (⚠️ FestivalScheduleRepository에 deleteByFestivalDetail_Id(String fid) 메서드가 필요)
+        // 스케줄 교체
         scheduleRepository.deleteByFestivalDetail_Id(fid);
         List<FestivalSchedule> schedules = (request.getSchedules() == null ? List.of()
                 : request.getSchedules().stream()
@@ -209,7 +223,7 @@ public class FestivalManageService {
         festival.setFname(request.getFname());
         festival.setFdfrom(fdfrom);
         festival.setFdto(fdto);
-        festival.setPosterFile(posterUrl);
+        festival.setPosterFile(detail.getPosterFile());
         festival.setFcltynm(request.getFcltynm());
         festival.setGenrenm(request.getGenrenm());
         festival.setPrfage(detailReq.getPrfage());
@@ -223,6 +237,9 @@ public class FestivalManageService {
         return FestivalRegisterResponseDTO.fromEntity(festival, detail, schedules);
     }
 
+    /**
+     * 공연 삭제 (DB와 S3 파일 모두 삭제)
+     */
     @Transactional
     public void deleteFestivalByHost(String fid, Long userId, boolean isAdmin) {
         Festival festival = festivalRepository.findByFestivalDetail_Id(fid)
@@ -232,31 +249,75 @@ public class FestivalManageService {
             throw new BusinessException(ErrorCode.NOT_OWNER);
         }
 
+        FestivalDetail detail = festival.getFestivalDetail();
+
+        // S3에서 포스터 및 콘텐츠 파일 삭제
+        if (detail.getPosterFile() != null) {
+            deleteFileFromS3(detail.getPosterFile());
+        }
+        if (detail.getContentFile() != null) {
+            detail.getContentFile().forEach(this::deleteFileFromS3);
+        }
+
         kafkaProducer.sendDeleted(fid);
 
         festivalRepository.delete(festival);
         detailRepository.deleteById(fid);
     }
 
-    public List<FestivalRegisterResponseDTO> getFestivalsByRole(Long userId, boolean isAdmin) {
-        List<Festival> festivals;
-        if (isAdmin) {
-            festivals = festivalRepository.findAll();
-        } else {
-            festivals = festivalRepository.findByFestivalDetail_UserId(userId);
+    /**
+     * S3 객체 삭제 헬퍼 메서드
+     */
+    private void deleteFileFromS3(String fileUrl) {
+        try {
+            if (fileUrl == null || fileUrl.isBlank()) {
+                return;
+            }
+            String key = extractS3KeyFromUrl(fileUrl);
+            DeleteObjectRequest deleteObjectRequest = DeleteObjectRequest.builder()
+                    .bucket(s3BucketName)
+                    .key(key)
+                    .build();
+            s3Client.deleteObject(deleteObjectRequest);
+            log.info("S3 object deleted successfully: {}", fileUrl);
+        } catch (Exception e) {
+            log.error("Failed to delete S3 object: {}", fileUrl, e);
         }
+    }
+
+    /**
+     * S3 URL에서 객체 키(Key)를 추출하는 헬퍼 메서드
+     */
+    private String extractS3KeyFromUrl(String fileUrl) {
+        try {
+            java.net.URL url = new java.net.URL(fileUrl);
+            return url.getPath().substring(1);
+        } catch (java.net.MalformedURLException e) {
+            throw new IllegalArgumentException("Invalid URL: " + fileUrl, e);
+        }
+    }
+
+    // 공연 목록 조회
+    public List<FestivalRegisterResponseDTO> getFestivalsByRole(Long userId, boolean isAdmin) {
+        List<Festival> festivals = isAdmin
+                ? festivalRepository.findAll()
+                : festivalRepository.findByFestivalDetail_UserId(userId);
 
         return festivals.stream()
                 .map(festival -> {
                     Hibernate.initialize(festival.getFestivalDetail().getSchedules());
-                    return FestivalRegisterResponseDTO.fromEntity(festival, festival.getFestivalDetail(), festival.getFestivalDetail().getSchedules());
+                    return FestivalRegisterResponseDTO.fromEntity(
+                            festival,
+                            festival.getFestivalDetail(),
+                            festival.getFestivalDetail().getSchedules()
+                    );
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    // 공연 상세 조회
     @Transactional
     public FestivalRegisterResponseDTO getFestivalDetail(String fid, Long userId, boolean admin) {
-        // 기존의 IllegalArgumentException, SecurityException 대신 BusinessException 사용
         FestivalDetail detail = detailRepository.findById(fid)
                 .orElseThrow(() -> new BusinessException(ErrorCode.FESTIVAL_NOT_FOUND, "존재하지 않는 공연입니다."));
 
@@ -268,31 +329,4 @@ public class FestivalManageService {
         return FestivalRegisterResponseDTO.fromEntity(detail.getFestival(), detail, detail.getSchedules());
     }
 
-    private String generateUniqueFid() {
-        String fid;
-        do {
-            fid = "PF" + randomNumeric(6);
-            if (detailRepository.existsById(fid)) {
-                // 중복될 경우 BusinessException을 던져서 명확하게 알림
-                throw new BusinessException(ErrorCode.DUPLICATE_FID, "공연 식별자 생성 중 중복이 발생했습니다.");
-            }
-        } while (detailRepository.existsById(fid)); // 이 부분은 이제 위에서 예외를 던지므로 사실상 의미가 없어짐
-        return fid;
-    }
-
-    private String randomNumeric(int count) {
-        StringBuilder builder = new StringBuilder();
-        for (int i = 0; i < count; i++) {
-            builder.append((int) (Math.random() * 10));
-        }
-        return builder.toString();
-    }
-
-    private String calcState(LocalDate fdfrom, LocalDate fdto) {
-        LocalDate today = LocalDate.now(ZoneId.of("Asia/Seoul"));
-        if (fdfrom == null || fdto == null) return "공연예정";
-        if (today.isBefore(fdfrom)) return "공연예정";
-        if (today.isAfter(fdto)) return "공연완료";
-        return "공연중";
-    }
 }
